add pause execution

--- a/TestNGWebApp/src/main/webapp/test.html
+++ b/TestNGWebApp/src/main/webapp/test.html
@@ -41,6 +41,9 @@
             <h3>Scenario</h3>
 
             <button onclick="execute()">run</button>
+            <button onclick="sendCmd('pause')">pause</button>
+            <button onclick="sendCmd('resume')">resume</button>
+            <button onclick="sendCmd('stop')">stop</button>
             <div id="jstree_scenario_builder" class=""
                  style="margin-top: 1em; min-height: 200px;">
 
